Update jvm_gc_ collector.md